--- a/vue2-review/package.json
+++ b/vue2-review/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "element-ui": "^2.15.13",
+    "nanoid": "^4.0.2",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
