--- a/vue2-review/package.json
+++ b/vue2-review/package.json
@@ -1,6 +1,6 @@
 {
-  "name": " vue2-elementui-test",
-  "version": "0.0.0",
+  "name": " vue2-review",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,7 +10,11 @@
   "dependencies": {
     "axios": "^1.4.0",
     "element-ui": "^2.15.13",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "nanoid": "^4.0.2",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
